# AoC

./: .gitignore  CMakeLists.txt  Cargo.toml  README.md  TODO.md  main.cpp  main.py  pyproject.toml  util.h  util.py
AoC2018/: util.h
AoC2018/Old/AoC_01/: AoC_01.vcxproj  Source.cpp
AoC2018/Old/AoC_02/: Project1.vcxproj  Source.cpp
AoC2018/Old/AoC_03/: A0C_03.vcxproj  Source.cpp
AoC2018/Old/AoC_04/: AoC_04.vcxproj  Source.cpp
AoC2018/Old/AoC_05/: AoC_05.vcxproj  Source.cpp
AoC2018/Old/AoC_06/: AoC_06.aps  AoC_06.vcxproj  Source.cpp
AoC2018/Old/AoC_07/: AoC_07.vcxproj  Source.cpp
AoC2018/Old/AoC_08/: AoC_08.vcxproj  Source.cpp
AoC2018/Old/AoC_09/: AoC_09.vcxproj  Source.cpp  input.txt
AoC2018/Old/AoC_10/: AoC_10.vcxproj  Source.cpp  input.txt
AoC2018/Old/AoC_11/: AoC_11.vcxproj  Source.cpp
AoC2018/Old/AoC_12/: AoC_12.vcxproj  Source.cpp
AoC2018/Old/AoC_13/: AoC_13.vcxproj  Source.cpp
AoC2018/Old/AoC_14/: AoC_14.vcxproj  Source.cpp  input.txt
AoC2018/Old/AoC_15/: AoC_15.vcxproj  Source.cpp  input.txt
AoC2018/Old/AoC_16/: AoC_16.vcxproj  AoC_16.vcxproj.filters  Source.cpp  input1.txt
AoC2018/solutions/01/: output  solution.h
AoC2018/solutions/02/: output  solution.py
AoC2018/solutions/03/: output  solution.py
AoC2018/solutions/04/: output  solution.py
AoC2018/solutions/05/: output  solution.py
AoC2018/solutions/06/: output  solution.py
AoC2018/solutions/07/: output  solution.py
AoC2018/solutions/08/: output  solution.py
AoC2018/solutions/09/: output  solution.h
AoC2018/solutions/10/: output  solution.py
AoC2018/solutions/11/: output  solution.py
AoC2018/solutions/12/: output  solution.py
AoC2018/solutions/13/: output  solution.py
AoC2018/solutions/14/: output  solution.py
AoC2018/solutions/15/: output  solution.py
AoC2018/solutions/16/: output  solution.py
AoC2018/solutions/17/: output  solution.h  solution.jl  solution.py  solution.rs
AoC2018/solutions/18/: output  solution.rs
AoC2018/solutions/19/: output  solution.rs
AoC2018/solutions/20/: output  solution.py  solution.rs
AoC2018/solutions/21/: output  solution.rs
AoC2018/solutions/22/: output  solution.py
AoC2018/solutions/23/: output  solution.h  solution.rs
AoC2019/: util.h
AoC2020/include/: util.hpp
AoC2021/: util.h
AoC2022/: util.h
AoC2022/include/: array.hpp  string.hpp  util.hpp
aoc/: cmake.py
solutions/01/: solution.h  solution.jl
solutions/02/: solution.h  solution.jl
solutions/04/: solution.py
solutions/day01/: solution.py
solutions/day02/: solution.h  solution.jl  solution.py
src/: main.rs
templates/: main.cpp  main.py  main.rs  solution.h  solution.jl  solution.py  solution.rs  util.h
util/: array.h  string.h
(+512 files in other folders)
