[tool.poetry]
name = "aoc"
version = "0.1.0"
description = ""
authors = ["adi.causevic <adi.causevic@distran.ch>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
advent-of-code-data = "^2.0.1"

[tool.poetry.dev-dependencies]
black = "^23.12.0"
isort = "^5.13.2"

[tool.black]
line-length = 79

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
